--- a/pom-manage-module/pom.xml
+++ b/pom-manage-module/pom.xml
@@ -7,6 +7,11 @@
     <groupId>cn.liulele</groupId>
     <artifactId>pom-manage-module</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>../faced-pattern-demo-module</module>
+        <module>../faced-pattern-demo2-module</module>
+        <module>../proxy-pattern-demo-module</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
