设计模式实战

--- a/pom-manage-module/pom.xml
+++ b/pom-manage-module/pom.xml
@@ -11,6 +11,7 @@
         <module>../faced-pattern-demo-module</module>
         <module>../faced-pattern-demo2-module</module>
         <module>../proxy-pattern-demo-module</module>
+        <module>../spring-elasticsearch-study-module</module>
     </modules>
 
     <properties>
