--- a/pom-manage-module/pom.xml
+++ b/pom-manage-module/pom.xml
@@ -12,6 +12,7 @@
         <module>../faced-pattern-demo2-module</module>
         <module>../proxy-pattern-demo-module</module>
         <module>../spring-elasticsearch-study-module</module>
+        <module>../redis-study</module>
     </modules>
 
     <properties>
@@ -55,4 +56,24 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <fork>true</fork>
+                    <addResources>true</addResources>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
