--- a/common-component/common-mybatis/pom.xml
+++ b/common-component/common-mybatis/pom.xml
@@ -3,17 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>mybatis-study-module</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
-
     <parent>
-        <artifactId>pom-manage-module</artifactId>
-        <groupId>cn.liulele</groupId>
+        <groupId>cn.liulele.common</groupId>
+        <artifactId>common-component</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom-manage-module/pom.xml</relativePath>
     </parent>
+
+    <artifactId>common-mybatis</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -22,17 +18,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>cn.liulele</groupId>
-            <artifactId>base-module</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -51,14 +36,5 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.2.14</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>1.13.1</version>
-        </dependency>
-
-
     </dependencies>
-
 </project>
