--- a/common-component/common-redis/pom.xml
+++ b/common-component/common-redis/pom.xml
@@ -3,15 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
     <parent>
-            <groupId>cn.liulele</groupId>
-            <artifactId>pom-manage-module</artifactId>
-            <version>1.0-SNAPSHOT</version>
+        <groupId>cn.liulele.common</groupId>
+        <artifactId>common-component</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>spring-batch-module</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>cn.liulele.common.redis</groupId>
+    <artifactId>common-redis</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -19,23 +18,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-
     <dependencies>
         <dependency>
-            <groupId>cn.liulele</groupId>
-            <artifactId>base-module</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-batch</artifactId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
     </dependencies>
-
 </project>
