--- a/common-component/pom.xml
+++ b/common-component/pom.xml
@@ -3,15 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
-    <parent>
-            <groupId>cn.liulele</groupId>
-            <artifactId>pom-manage-module</artifactId>
-            <version>1.0-SNAPSHOT</version>
-    </parent>
 
-    <artifactId>spring-batch-module</artifactId>
+    <groupId>cn.liulele.common</groupId>
+    <artifactId>common-component</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>common-redis</module>
+        <module>common-mybatis</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -19,6 +19,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <parent>
+        <artifactId>pom-manage-module</artifactId>
+        <groupId>cn.liulele</groupId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom-manage-module/pom.xml</relativePath>
+    </parent>
 
     <dependencies>
         <dependency>
@@ -27,15 +33,6 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-batch</artifactId>
-        </dependency>
     </dependencies>
-
 </project>
